# julia_set

./: CMakeLists.txt  LICENSE  README.md
src/: colortools.cpp  colortools.hpp  juliaset.cpp  juliaset.hpp  main.cpp
